Changed renderEntry function argument to inputValues variable and removed extra call of function, added alt attribute to image in renderEntry function, made querySelectors global, and fixed CSS to align images on entry view

--- a/css/layout.css
+++ b/css/layout.css
@@ -38,3 +38,9 @@
   display: flex;
   justify-content: flex-end;
 }
+
+.entry-row {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -40px;
+}
