--- a/css/styles.css
+++ b/css/styles.css
@@ -136,3 +136,11 @@ li {
   align-items: center;
   justify-content: space-between;
 }
+
+input:focus {
+  outline-color: rgb(86 43 129);
+}
+
+textarea:focus {
+  outline-color: rgb(86 43 129);
+}
